2000-11-14  Masatake YAMATO  <yamato@redhat.com>

	* main.c: use autotrace.[ch].

	* autotrace.c: New file.

	* autotrace.h: New file.

	* output.c(output_list): New function.

	* input.c (input_format_entry): Added descr field.
	(input_list): New function.
	(input_list_formats): Move to main.
	
	* fit.h (fitting_opts_type): Added new field `thin'.

	* fit.c (new_fitting_opts): Initialize thin.

	* README (http): Remove files in main part.

	* Makefile.am (autotrace_SOURCES): Added autotrace.[ch].

	* fit.c: Apply a patch from martin.
	"I fixed a bug in fit.c that sometimes causes an endless 
	loop in AutoTrace."

	* main.c: Don't include main.h.
	Include image-header.h.

	* Makefile.am (autotrace_SOURCES): Remove main.h.
	
	* main.c(input_reader): Renamed from load_image.
	Use type input_read.
	(input_extension): Removed unused variable
	(set_input_format): 
	(set_input_format_by_suffix): Removed.
	Use input_get_handler* instead.
	(main): Check `input_reader' is set or not before
	set. 
	Set output format and open output before oput input.
	Close output.
	Call free_bitmap instead of calling free directly.
	(image_header):	 Make the scope of `image_header' to 
	main local from global.

	* THANKS: New file.

	* input-magick.c: Replaced with new one from Martin.

	* Makefile.am (INCLUDES): -Wall is removed.

2000-11-11  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (autotrace_LDADD): Added LIBPNG_LDFLAGS
	to autotrace_LDADD.

2000-11-10 Martin Weber <martweb@gmx.net>
	Removed warning in pxl-outline.c
2000-11-06 Martin Weber <martweb@gmx.net>
	Fixed some warnings with gcc on AIX in xmem.h
2000-11-04 Martin Weber <martweb@gmx.net>
	Removed warning for input-magick.c
	Improved input-p2e.c
2000-11-03 Martin Weber <martweb@gmx.net>
	Fixed a bug in input-bmp.c
2000-11-02 Martin Weber <martweb@gmx.net>
	pxl-outline.c completely rewritten
	removed edge.c
2000-10-30 Martin Weber <martweb@gmx.net>
	Removed problems with nonvalid filenames.
	Fixed some compiler warnings.